tests/machine/x/scala/right_join.error
exit status 1
/workspace/mochi/tests/machine/x/scala/right_join.scala:15: error: value id is not a member of Option[right_join.Order]
        println(s"Customer ${entry.customerName} has order ${entry.order.id} - $$${entry.order.total}")
                                                                         ^
/workspace/mochi/tests/machine/x/scala/right_join.scala:15: error: value total is not a member of Option[right_join.Order]
        println(s"Customer ${entry.customerName} has order ${entry.order.id} - $$${entry.order.total}")
                                                                                               ^
two errors found
